# evolving-digital-ecologies

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.codex/: local_environment.toml
.codex/actions/: install-dependencies.md  run-app.md  run-tests.md
configs/: default.yaml  experiment_behavior_comparison.yaml  experiment_environment_sweep.yaml  experiment_mutation_sweep.yaml  long_evolution.yaml  long_live_analysis.yaml  neural.yaml  quick_demo.yaml
docs/: ABGABE_CHECKLIST.md  ACCESSIBILITY_CONCEPT.md  PRESENTATION_SUMMARY.md  QUICK_COMMANDS.md  experiments.md  scientific_design.md
docs/notebooklm/: 01_PROJEKTUEBERBLICK.md  02_ARCHITEKTUR_UND_MODULE.md  03_SIMULATIONSABLAUF.md  04_ERGEBNISSE_UND_INTERPRETATION.md  05_LERNVIDEO_SKRIPT.md  06_GLOSSAR_UND_FAQ.md  NOTEBOOKLM_UPLOAD_GESAMT.txt  README_NOTEBOOKLM.md
notebooks/: README.md
scripts/: generate_live_preview.py
src/: __init__.py
src/agents/: __init__.py  agent.py  genome.py  traits.py
src/analytics/: __init__.py  export.py  metrics.py
src/behavior/: __init__.py  actions.py  controllers.py  perception.py
src/core/: __init__.py  config.py  geometry.py  rng.py
src/evolution/: __init__.py  lineage.py  mutation.py  population.py
src/experiments/: __init__.py  runner.py
src/neuroevolution/: __init__.py  network.py
src/simulation/: __init__.py  engine.py
src/utils/: logging.py
src/visualization/: live.py  (+3 more)
tests/: test_determinism.py  test_experiment_runner.py  test_metrics.py  test_mutation.py  test_reproduction.py  test_resource_consumption.py  test_world.py
(+4 files in other folders)
