[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alife-thesis-sim"
version = "0.1.0"
description = "Research-grade artificial life simulation framework for emergent evolutionary dynamics."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "JoHendel" },
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "PyYAML>=6.0",
    "pygame>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
alife-sim = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
